<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="30dip" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="@string/AddNewPersonPageFirstNameLabel" />

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_weight="0.7"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="30dip" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="@string/AddNewPersonPageLastNameLabel" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_weight="0.7"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="30dip" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="@string/AddNewPersonPageRelationshipLabel" />

	    <Spinner
	        android:id="@+id/spinnerRelationship"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:entries="@array/relationship_type"
	        android:prompt="@string/relationship_prompt"
	        android:spinnerMode="dropdown"
            android:layout_marginLeft="15dip"	
            android:layout_weight="0.7"
	         />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="30dip" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="@string/AddNewPersonPageBirthdateLabel" />

        <EditText
            android:id="@+id/editTextBirthdate"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:layout_weight="0.7"
            android:hint="@string/DateHint"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="30dip" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="@string/AddNewPersonPageGenderLabel" />

        <RadioGroup
            android:id="@+id/radioGrpGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/AddNewPersonPageMaleLabel" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AddNewPersonPageFemaleLabel" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="30dip" >
   
    <Button
                android:id="@+id/btnCancel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/AddNewPersonPageCancelBtn"
                android:textSize="13sp" />
    <Button
                android:id="@+id/btnAdd"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:minHeight="35dp"
                android:text="@string/AddNewPersonPageAddBtn"
                android:textSize="13sp"/>
    
    </LinearLayout>

</LinearLayout>