
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp" >   
           
	    <TextView
	        android:id="@+id/textViewDetailsPageHeader"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:paddingLeft="10dp"
	        android:text="@string/DetailsPageHeader" />
    
	</TableRow>
	
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
    <TextView
        android:id="@+id/textViewFirstConditionLabel"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:text="@string/DetailsPageFirstCondition"
        android:textStyle="bold" />
             

    <TextView
        android:id="@+id/textViewFirstConditionField"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:text="@string/DetailsPageFirstConditionField"
        android:paddingLeft="4dp" />
    
	</TableRow>
	
        <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
           
    <TextView
        android:id="@+id/textViewFirstConditionDateLabel"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:text="@string/DetailsPageDate"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewFirstConditionDateField"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:paddingLeft="4dp"
        android:text="@string/DetailsPageFirstConditionDateField" />
    
	</TableRow>

     <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
           
    <TextView
        android:id="@+id/textViewFirstConditionRemarksLabel"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:text="@string/DetailsPageRemarksLabel"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewFirstConditionRemarksField"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:paddingLeft="4dp"
        android:text="@string/DetailsPageFirstConditionRemarksField" />
    
	</TableRow>
    
    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
           
    <TextView
        android:id="@+id/textViewSecondConditionLabel"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:text="@string/DetailsPageFirstCondition"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSecondConditionField"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:paddingLeft="4dp"
        android:text="@string/DetailsPageSecondConditionField" />
    
	</TableRow>	
    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
           
    <TextView
        android:id="@+id/textViewSecondConditionDateLabel"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:text="@string/DetailsPageDate"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSecondConditionDateField"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:paddingLeft="4dp"
        android:text="@string/DetailsPageSecondConditionDateField" />
    
	</TableRow>
	
   <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
           
    <TextView
        android:id="@+id/textViewSecondConditionRemarksLabel"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:text="@string/DetailsPageRemarksLabel"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewSecondConditionRemarksField"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:paddingLeft="4dp"
        android:text="@string/DetailsPageSecondConditionRemarksField" />
    
	</TableRow>
	<TableRow
        android:id="@+id/tableRow7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
     
    <Space/>    
    <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:minHeight="35dp"
                android:text="@string/TreeScreenAddButton"
                android:textSize="13sp" />
    </TableRow>
</TableLayout>