    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		   android:layout_width="95dp"
			    android:layout_height="fill_parent"
			    android:paddingLeft="16dp"
			    android:paddingRight="16dp"
			    android:orientation="vertical" >
            
		        <ImageView
		            android:id="@+id/personImage"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:contentDescription="@string/imageDesc"
		            android:src="@drawable/male"
		            android:layout_gravity="center_horizontal" />

		        <TextView
		             android:id="@+id/personRelation"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_horizontal"
		            android:text="@string/TreeScreenSibling1"
		            android:textSize="12sp" />
		        <TextView
		                android:id="@+id/personName"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center_horizontal"
		            android:text="@string/nameExample"
		            android:textSize="12sp" />			        		        
			</LinearLayout>